JumpScript/tests/baselines/reference/importDeclWithDeclareModifierInAmbientContext.errors.txt
tests/cases/compiler/importDeclWithDeclareModifierInAmbientContext.jump(6,5): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


==== tests/cases/compiler/importDeclWithDeclareModifierInAmbientContext.jump (1 errors) ====
    declare module "m" {
        module x {
            interface c {
            }
        }
        declare export import a = x.c;
        ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
        var b: a;
    }
    